# starmaker-toolkit

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml  starmaker.example.yaml
starmaker/: __init__.py  cli.py  config.py  credentials.py
starmaker/commands/: __init__.py  audit.py  auto_post.py  awesome.py  compare.py  draft_posts.py  post.py  readme.py
starmaker/nlp/: humanizer.py  readme_parser.py
starmaker/publishers/: __init__.py  _camoufox_open.py  base.py  devto_publisher.py  discord_publisher.py  hackernews_publisher.py  reddit_publisher.py  twitter_publisher.py
starmaker/setup_wizard/: __init__.py  browser.py  devto_setup.py  discord_setup.py  reddit_setup.py  wizard.py
starmaker/utils/: __init__.py  console.py  github_api.py  markdown.py
templates/: devto.md  discord.md  hackernews.md  reddit.md  twitter.md
tests/: conftest.py  test_auto_post.py  test_credentials.py  test_humanizer.py  test_readme_parser.py
